Login page + Upload files page

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,14 +13,17 @@
     
 	    <div class="container center" style="padding : 25px; width : 50%">
 	    	<h1 class="text-center">Food Visualization Engine</h1>
-	        <div class="row" style="margin-top: 25px">
-				<div class="input-group mb-3">
-					<input type="text" class="form-control" placeholder="Search...">
-					<div class="input-group-append">
-						<button class="btn btn-primary" type="button">Search</button>
-					</div>
-				</div>
-	        </div>
+	      <div class="row" style="margin-top: 25px">
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Search...">
+            <div class="input-group-append">
+              <button class="btn btn-primary" type="button">Search</button>
+            </div>
+          </div>
+          <div>
+            <a href="/upload" class="button">Upload data</a>
+          </div>
+	      </div>
 	    </div>
     
     <div id="trend" class="text-center fw-bold" style="font-size: 25px; color:rgb(235, 23, 23)"></div>
